<resources>
    <string name="app_name">Karting Hell</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_circuits">Circuitos</string>
    <string name="menu_bookings">Reservas</string>
    <string name="menu_location">Localización</string>
    <string name="button_view">Ver</string>
    <string name="app_mail">info@kartinghell.com</string>
    <string name="details_bookings_title">Detalles de la reserva</string>
    <string name="button_edit">Editar</string>
    <string name="button_delete">Eliminar</string>
    <string name="descargalo_en_pdf">Descargalo en pdf</string>


</resources>