<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="es.uca.kartinghell.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_circuits"
        android:name="es.uca.kartinghell.ui.circuits.CircuitsFragment"
        android:label="@string/menu_circuits"
        tools:layout="@layout/fragment_circuits" />

    <fragment
        android:id="@+id/nav_bookings"
        android:name="es.uca.kartinghell.ui.bookings.BookingsFragment"
        android:label="@string/menu_bookings"
        tools:layout="@layout/fragment_bookings" />

    <fragment
        android:id="@+id/nav_location"
        android:name="es.uca.kartinghell.ui.location.LocationFragment"
        android:label="@string/menu_location"
        tools:layout="@layout/fragment_location" />
</navigation>