<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detailsBookings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textViewDetailsBookingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/details_bookings_title"
            android:textColor="@color/red"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textViewDetailsBookingsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Nombre"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewDetailsBookingsDNI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="DNI"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewDetailsBookingsPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Teléfono"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewDetailsBookingsEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Correo Electrónico"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewDetailsBookingsDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Fecha"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewDetailsBookingsStartHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Hora Inicio"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewDetailsBookingsEndHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Hora Fin"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewDetailsBookingsNumPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Nº Personas"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewDetailsBookingsSuggestions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Comentarios"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewDetailsBookingsCircuit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Circuito"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete"
        tools:layout_editor_absoluteX="263dp"
        tools:layout_editor_absoluteY="667dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_edit"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="667dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>