<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsBookings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bookings.DetailsBookingsFragment"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textViewDetailsBookingsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/details_bookings_title"
                android:textColor="@color/red"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewDetailsBookingsName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Nombre"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewDetailsBookingsDNI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="DNI"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewDetailsBookingsPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Teléfono"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewDetailsBookingsEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Correo Electrónico"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewDetailsBookingsDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Fecha"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewDetailsBookingsStartHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Hora Inicio"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewDetailsBookingsEndHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Hora Fin"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewDetailsBookingsNumPeople"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Nº Personas"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewDetailsBookingsSuggestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Comentarios"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewDetailsBookingsCircuit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Circuito"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="130dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/buttonEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_edit" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="right">
                <Button
                    android:id="@+id/buttonDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_delete"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>